elves-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elves-pod-deployment
  namespace: gondor
  labels:
    app: webserver
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: web
          image: nginx
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
                - name: nginx-index-file
                  mountPath: /usr/share/nginx/html/
      volumes:
          - name: nginx-index-file
            configMap:
              name: elves-index-html-cm
