elves-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: elves-svc
  namespace: gondor
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elves-ingress
  namespace: gondor
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: middleearth.local
      http:
        paths:
          - backend:
              service:
                name: elves-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
