elves.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elves-pod
  namespace: gondor
  labels:
    role: webserver
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: elves-svc
  namespace: gondor
spec:
  selector:
    role: webserver
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elves-ingress
  namespace: gondor
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: middleearth.local
      http:
        paths:
          - backend:
              service:
                name: elves-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
